2005-04-29  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_test_ogl.cpp (main): Add -mi and -ma options to
	set the minimum and maximum LOD Bais.
	* gameswf_render_handler_ogl.cpp (apply): Set the LOD Bais.

	* gameswf/gameswf_impl.cpp (get_topmost_mouse_entity): Don't
	return a character unless the parent is visible.

2005-04-26  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_textformat.cpp: Add setTextFormat as a variable
	when making a new TextFormat object.

2005-04-19  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_movie.cpp: Use different headers on win32.
	* gameswf/gameswf_xmlsocket.cpp: Use different headers on win32
	for tcp/ip networking. Also define MAXHOSTNAMELEN if if doesn't
	exist, don't use fcntl(), and use SHUT_BOTH for shutdown() on
	win32 as well.
	* configure.ac: Set HAVE_WINSOCK if the platform is win23.
	* configure: Regenerated.
	* gameswf/Makefile: Add optional libxml support. Update
	dependencies to not have system paths.
	* config: Add optional libxml defines.

2005-04-16  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_xml.cpp (extractNode): New recursive
	version. Faster, and uses less memory.
	(setupFrame) New recursive version. Faster, and uses less memory.
	* gameswf_impl.cpp: Move the definition of bitmap_character to
	gameswf_impl.h.
	* gameswf_movie.cpp (loadclip): Various hacks trying to replace a
	character with a bitmap defined by a jpeg. None of these works
	yet...
	* gameswf_xml.h: Add conditional debug print statements as
	constructor/destructors so we can track memory allocation.
	* gameswf_xmlsocket.cpp (XMLSocket::anydata): Return the returned
	value.
	* kd_tree_dynamic.cpp: Comment out a few variable definitions that
	aren't used cause GCC 4.1 complains.

2005-04-14  Rob Savoye  <rob@bertha.welcomehome.org>

	* base/utility.h: Tweak definitions of _max and _min to not
	produce errors with a more recent GCC because the "<?" operator
	has been depreciated.
